--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -473,7 +473,7 @@
 
       								<div class="col-md-4">
       									<div class="bar">
-      								  	<div class="bar-inner bar-<%=(taskdo.wansungdo).to_i %>" id="bar_disappear"data-percent="<%=(taskdo.wansungdo).to_i %>%"></div>
+      								  	<div class="bar-inner bar-<%=(taskdo.wansungdo).to_i %>" data-percent="<%=(taskdo.wansungdo).to_i %>%"></div>
       									</div>
       									<script> horild(); </script>
       								</div>
