erase first_name

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,11 +23,11 @@ background-size: cover;
             </div>
             
             <div class="field">
-              <%= f.text_field :last_name, required: true, value: "성 설정하기", hidden: true %>
+              <%= f.text_field :last_name, required: true, value: "왜만듬?", hidden: true %>
             </div>
             
             <div class="field">
-              <%= f.text_field :first_name, required: true, value: "이름 설정하기", hidden: true %>
+              <%= f.text_field :first_name, required: true, value: "이름", hidden: true %>
             </div>
           
             <div class="field">
