--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,4 +1,4 @@
-<h3>클라우드 <small>파일명을 클릭하면 다운로드됩니다.</small></h3>
+<h3 style="margin-top: 0px;">클라우드 <small>파일명을 클릭하면 다운로드됩니다.</small></h3>
 <button type="button" class="btn btn-new btn-xs" data-toggle="modal" data-target="#myModal" style="margin-bottom: 5px;">
   전체 공개 파일 업로드
 </button>
