--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -128,7 +128,7 @@
         <div class="row">
           <div id="profile_on_tasklist<%=idx%>" class="col-sm-12">
             <aside >
-              <img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
+              <img id="img_setting" class="img-circle" alt="profile" style="width: 70px;height: 70px;float: left;margin-right: 8px;padding: 10px;" src="<%=t.image%>">
             </aside>
             <h5 style="padding-top: 15px;"><%=t.first_name%></h5>
           </div>
