--- a/app/views/sync/messages/_newmessages.html.erb
+++ b/app/views/sync/messages/_newmessages.html.erb
@@ -12,9 +12,10 @@
           <%=message.content%><br>
         <% end %>
         <% if message.messagetype == 1 %>
-
-          <a href="<%=message.imagemessage.imagemessageupload.url%>"><img class="imagemessages" src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;"></a><br>
-
+          <div style="height: 200px">
+            <a href="<%=message.imagemessage.imagemessageupload.url%>" target="_blank"><img class="imagemessages" src="<%=message.imagemessage.imagemessageupload.url%>" style="padding: 10px; max-width: 70%; height: auto;max-height:200px;"></a>
+          </div>
+          <br>
         <% end %>
         <% if message.messagetype == 2 && message.filemessage.filemessageupload.file %>
 
