--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,9 @@ background-size: cover;
       <div class="panel panel-default">
         <div class="panel-body">
 
-          <h2><%=@email%></h2>
-          <p>비밀번호만 설정하면 가입이 완료됩니다.</p>
+          <h2 style="margin-top: 0px;word-wrap:break-word; word-break:break-all;"><%=@email%></h2>
+          <p>이름과 비밀번호만 설정하면 가입이 완료됩니다.</p>
+          <br>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
           
@@ -25,25 +26,21 @@ background-size: cover;
             <div class="field">
               <%= f.text_field :last_name, required: true, value: "왜만듬?", hidden: true %>
             </div>
-            
-            <div class="field">
-              <%= f.text_field :first_name, required: true, value: "이름", hidden: true %>
-            </div>
-          
-            <div class="field">
-              <% if @minimum_password_length %>
-                <%= f.password_field :password, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호(최소 "+@minimum_password_length.to_s+"자)" %>
-              <% else %>
-                <%= f.password_field :password, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호" %>
-              <% end %>
-            </div>
-          
-            <div class="field">
-              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off", required: true, placeholder: "확인" %>
+            <div class="row">
+              <div class="col-sm-8 col-sm-offset-2">
+                <%= f.text_field :first_name, class: "form-control", required: true, placeholder: "이름" %>
+                <% if @minimum_password_length %>
+                  <%= f.password_field :password, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호(최소 "+@minimum_password_length.to_s+"자)" %>
+                <% else %>
+                  <%= f.password_field :password, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호" %>
+                <% end %>
+                <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off", required: true, placeholder: "비밀번호 확인" %>
+                <br>
+                <button type="submit" class="btn btn-new" style="width: 100%;">가입 완료</button>
+              </div>
             </div>
           
             <div class="actions">
-              <button type="submit" class="btn btn-link">가입 완료</button>
             </div>
           <% end %>
           
