several problem fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -440,25 +440,22 @@ function notifyMe() {
 </script>
 
 -->
-
 <script>
-
-$(function () {
-  $('[data-toggle="tooltip"]').tooltip()
-})
-
 // Include the UserVoice JavaScript SDK (only needed once on a page)
-UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/nma6fghhmsHmFxYMlrLtsg.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+UserVoice=window.UserVoice||[];(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/tpe18kjSnChYgfr0t5a84w.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})();
+
 //
 // UserVoice Javascript SDK developer documentation:
 // https://www.uservoice.com/o/javascript-sdk
 //
+
 // Set colors
 UserVoice.push(['set', {
-  accent_color: '#6aba2e',
+  accent_color: '#41ce9e',
   trigger_color: 'white',
-  trigger_background_color: '#6aba2e'
+  trigger_background_color: '#41ce9e'
 }]);
+
 // Identify the user and pass traits
 // To enable, replace sample data with actual user traits and uncomment the line
 UserVoice.push(['identify', {
@@ -478,13 +475,17 @@ UserVoice.push(['identify', {
   //  plan:         'Enhanced' // Plan name for the account
   //}
 }]);
+
 // Add default trigger to the bottom-right corner of the window:
 UserVoice.push(['addTrigger', {mode: 'contact', trigger_position: 'bottom-right' }]);
+
 // Or, use your own custom trigger:
 //UserVoice.push(['addTrigger', '#id', { mode: 'contact' }]);
+
 // Autoprompt for Satisfaction and SmartVote (only displayed under certain conditions)
 UserVoice.push(['autoprompt', {}]);
 </script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
