--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -51,7 +51,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-nil" data-dismiss="modal">닫기</button>
-        <button type="button" onclick="$('#upload').submit();" class="btn btn-new">Save changes</button>
+        <button type="button" onclick="$('#upload').submit();" class="btn btn-new">업로드</button>
       </div>
     </div>
   </div>
