--- a/app/views/test/index.html.erb
+++ b/app/views/test/index.html.erb
@@ -51,7 +51,7 @@ function chatbot6(){
   $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br>이제 로그인 하고 팀플을 도와주는 클라우드와 워크맵 등의 더 많은 기능을 이용해 보세요.<br></div></div>");
 }
 function chatbot7(){
-  $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br><a href=\"/users/sign_up\">가입하기</a> 또는 <a href=\"/users/sign_in\">로그인</a><br></div></div>");
+  $("#test").append("<div class=\"row\"><div class=\"col-sm-1\"><img src=\"/favicon.ico\" class=\"img-rounded\" style=\"padding-top:2px; padding-left:2px\" width=\"36px\" height=\"36px\"></div><div class=\"col-sm-11\"><strong>그루퍼 봇</strong><br><a href=\"/users/sign_in\">가입하기</a> 또는 <a href=\"/users/sign_in\">로그인</a><br></div></div>");
 }
 function whiteboard1(){
   $("#whiteboard").append("이곳은 화이트 보드에요. 팀방의 모든 사람들이 함께 쓰는 칠판 같은 곳이죠.");
