--- a/app/assets/stylesheets/html_erb_task.css
+++ b/app/assets/stylesheets/html_erb_task.css
@@ -79,10 +79,7 @@
 #special_taskname{
     margin-top: 20px;
 }
-@media screen and (max-width: 991px) {
-    #bar_disappear{
-        height:0px;
-    }
+@media screen and (max-width: 991px) {d
     #special_taskname{
         margin-top: 60px;
     }
