--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -128,7 +128,7 @@
                 <div class="row">
                   <div class="col-xs-9">
                     <h4 class="panel-title">
-                      <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne" style="font-family: 'Jeju Gothic', sans-serif;">
+                      <a href="/chat/show?team=<%=@team.id%>" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
                       팀 홈으로
                       </a>
                     </h4>
@@ -141,13 +141,20 @@
             </div>
             <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
-          <h4 class="panel-title">
           <% temp = [] %>
           <% temp += @team.users.order(first_name: :asc) %>
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              멤버 <small><%=temp.count%>명</small> <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-            </a>
-          </h4>
+          <div class="row">
+            <div class="col-xs-9">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                멤버 <small><%=temp.count%>명</small>
+                </a>
+              </h4>
+            </div>
+            <div class="col-xs-3" style="text-align: right;">
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            </div>
+          </div>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body" style="max-height: 300px;overflow: auto;">
