--- a/app/views/task/show.html.erb
+++ b/app/views/task/show.html.erb
@@ -165,6 +165,7 @@
           <% end %>
         <% end %>
       <% end %>
+      <div class="row" style="background-color: #F3F3F3;"><div class="bar2"></div></div>
       <script>
         ganttfn();
       </script>
