--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -496,3 +496,9 @@ UserVoice.push(['autoprompt', {}]);
   ga('send', 'pageview');
 
 </script>
+<script>
+  
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+</script>
