--- a/app/views/team/index.html.erb
+++ b/app/views/team/index.html.erb
@@ -16,7 +16,7 @@ background-size: cover;
       <div class="panel panel-default">
         <div class="panel-body">
           <h3>팀방 들어가기</h3>
-          <p>왼쪽 상단메뉴에서 팀 바꾸기를 눌러주세요!</p>
+          <p>왼쪽 상단메뉴에서 팀 고르기를 눌러주세요!</p>
         </div>
       </div>
     </div>
