--- a/app/views/test/authfail.html.erb
+++ b/app/views/test/authfail.html.erb
@@ -1,5 +1,3 @@
-
-
 <style>
     body
     {
@@ -17,7 +15,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
           <h3>
-            <%=@ment%>
+            초대장 인증이 잘못되었습니다. 초대장을 다시 보내보세요.<br><small>만약 계속 이와 같은 오류가 뜨면 오른쪽 하단의 ?풍선을 눌러 알려주세요.</small>
           </h3>
         </div>
       </div>
