--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -128,8 +128,8 @@
           </div>
           <div class="modal-footer">
 
-            <button id="closemodal" type="button" class="btn btn-default" data-dismiss="modal">취소</button>
-            <button id="imagesubmit" type="button" onclick="$('#imagefileupload').submit();$('#closemodal').click(); this.disabled=true;" class="btn btn-primary">이미지 올리기</button>
+            <button id="closemodal" type="button" class="btn btn-nil" data-dismiss="modal">취소</button>
+            <button id="imagesubmit" type="button" onclick="$('#imagefileupload').submit();$('#closemodal').click(); this.disabled=true;" class="btn btn-new">이미지 올리기</button>
           </div>
         </div>
       </div>
