--- a/app/views/team/adding.html.erb
+++ b/app/views/team/adding.html.erb
@@ -22,7 +22,7 @@
             
             <input type="hidden" name="team" value=<%=@team.id%>>
             
-            <button class="btn btn-link" href="#" onclick="this.parentNode.submit()">팀원 더 초대하기</button>
+            <button class="btn btn-new" href="#" onclick="this.parentNode.submit()">팀원 더 초대하기</button>
             <a class="btn btn-link" href="<%="/chat/show?team="+@team.id.to_s%>">그만 추가하기</a>
             
           </form>
