--- a/app/views/team/profile.html.erb
+++ b/app/views/team/profile.html.erb
@@ -49,8 +49,8 @@ background-size: cover;
       </div>
       <div class="modal-footer">
 
-        <button id="closemodal" type="button" class="btn btn-default" data-dismiss="modal">취소</button>
-        <button id="imagesubmit" type="button" onclick="$('#profileupload').submit();$('#closemodal').click(); this.disabled=true;" class="btn btn-primary">프로필 바꾸기</button>
+        <button id="closemodal" type="button" class="btn btn-nil" data-dismiss="modal">취소</button>
+        <button id="imagesubmit" type="button" onclick="$('#profileupload').submit();$('#closemodal').click(); this.disabled=true;" class="btn btn-new">프로필 바꾸기</button>
       </div>
     </div>
   </div>
