--- a/app/views/team/newteam.html.erb
+++ b/app/views/team/newteam.html.erb
@@ -21,7 +21,7 @@ background-size: cover;
             <div class="form-group">
               <input type="text" class="form-control" name="teamname" placeholder="팀 이름" required>
             </div>
-            <button type="submit" class="btn btn-default">팀 만들기</button>
+            <button type="submit" class="btn btn-new">팀 만들기</button>
             <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
           </form>
         </div>
